--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /3.- Conditional Statements/StudentChallenge4/build/
 /4.- Loops/Loop1/nbproject/private/
 /4.- Loops/Loop1/build/
+/4.- Loops/Factorial/nbproject/private/
+/4.- Loops/Factorial/build/
+/4.- Loops/DigitsOfANumber/nbproject/private/
